MB-62984: Reset the snapEndSeqno if past the vb highSeqno

Avoid constructing an ActiveStream with a snapshot range which
extends past the vb highSeqno and causes an incorrect SeqnoAdvanced to
be sent in the initial SnapshotMaker.

The apporach taken here is to set the snapEndSeqno = snapStartSeqno when
this is detected.

Change-Id: Ib1017a392c6107e2317da8fa4b37e9ae98fc605c
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/214292
Well-Formed: Restriction Checker
Tested-by: Vesko Karaganev <vesko.karaganev@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>